[package]
name = "sgx-crypto"
version = "0.1.0"
authors = ["Lily Sturmann <lsturman@redhat.com>", "Nathaniel McCallum <npmccallum@redhat.com>" ]
license = "Apache-2.0"
edition = "2018"

[dependencies]
openssl = { version = "=0.10.29", features = [ "vendored" ] }
sgx-types = { path = "../sgx-types" }
memory = { path = "../memory" }

[patch.crates-io]
openssl = { git = 'https://github.com/npmccallum/rust-openssl', branch='patch' }
