[package]
name = "sgx-show"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgx-types = { path = "../sgx-types" }
bytesize = "1.0.0"
colored = "1.9.1"
