[package]
name = "sgx-sys"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
sgx-types = { path = "../sgx-types" }
sgx-traits = { path = "../sgx-traits" }
