[package]
name = "sgx-types"
version = "0.1.0"
authors = ["Nathaniel McCallum <npmccallum@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["openssl"]

[dependencies]
openssl = { version = "0.10.26", optional = true }
bitflags = "1.2.1"
