[package]
name = "sgx"
version = "0.1.0"
authors = ["Lily Sturmann <lsturman@redhat.com>", "Nathaniel McCallum <npmccallum@redhat.com>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "crypto"]
std = ["iocuddle", "libc", "mmap", "vdso"]
crypto = ["std", "openssl"]
asm = ["xsave/asm"]

[dependencies]
bounds  = { path = "../bounds" }
memory = { path = "../memory" }
mmap = { path = "../mmap", optional = true }
openssl = { version = "=0.10.30", features = ["vendored"], optional = true }
xsave = { version = "0.1.1", default-features = false }
iocuddle = { version = "0.1", optional = true }
libc = { version = "0.2", optional = true }
vdso = { version = "0.1", optional = true }
bitflags = "1.2"

[dev-dependencies]
rstest = "0.6"
memoffset = "0.5.5"

[build-dependencies]
cc = "1.0"

[patch.crates-io]
openssl = { git = 'https://github.com/npmccallum/rust-openssl', branch='patch' }
