[package]
name = "enarx-config"
version = "0.7.1"
edition = "2021"
description = "Configuration for a WASI application in an Enarx Keep"
authors = ["The Enarx Project Developers"]
homepage = "https://enarx.dev/"
repository = "https://github.com/enarx/enarx"
license = "Apache-2.0"
keywords = ["enarx"]
categories = ["config"]
exclude = [".github/"]

[dependencies]
serde = { workspace = true }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
toml = { workspace = true }
