[package]
name = "enarx-exec-wasmtime"
version = "0.5.1"
edition = "2021"
description = "Enarx WebAssembly Loader"
authors = ["The Enarx Project Developers"]
repository = "https://github.com/enarx/enarx"
license = "Apache-2.0"

[dependencies]
anyhow = { version = "1.0", default-features = false }
cap-std = { version = "0.24.2", default-features = false }
const-oid = { version = "0.9.0", default-features = false }
env_logger = { version = "0.9", default-features = false }
getrandom = { version = "0.2.6", features = ["rdrand"], default-features = false }
io-lifetimes = { version = "0.5.0", default-features = false }
libc = { version = "0.2.126", default-features = false }
pkcs8 = { version = "0.9.0-pre.1", default-features = false }
ring = { version = "0.16.20", features = ["std"], default-features = false }
rustix = { version = "0.33.5", features = ["std"], default-features = false }
rustls = { version = "0.20.6", default-features = false }
sec1 = { version = "0.3.0-pre.1", features = ["der"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
sha2 = { version = "0.10.2", default-features = false }
system-interface = { version = "0.20.0", default-features = false }
toml = { version = "0.5.9", default-features = false }
ureq = { version = "2.4.0", features = ["tls"], default-features = false }
url = { version = "2.2.2", features = ["serde"], default-features = false }
wasi-common = { version = "0.37", default-features = false }
wasmtime = { version = "0.38", features = ["cranelift", "pooling-allocator"], default-features = false }
wasmtime-wasi = { version = "0.37", features = ["sync"], default-features = false }
webpki-roots = { version = "0.22.2", default-features = false }
wiggle = { version = "0.37", default-features = false }
x509-cert = { version = "0.0.2", features = ["std"], default-features = false }
zeroize = { version = "1.5.4", features = ["alloc"], default-features = false }

[target.'cfg(windows)'.dependencies]
io-extras = { version = "0.13.2", default-features = false }

[dev-dependencies]
wat = { version = "1.0", default-features = false }
