[package]
name = "enarx-exec-wasmtime"
version = "0.6.3"
edition = "2021"
description = "Enarx WebAssembly Loader"
authors = ["The Enarx Project Developers"]
repository = "https://github.com/enarx/enarx"
license = "Apache-2.0"

[dependencies]
anyhow = { version = "1.0", default-features = false }
const-oid = { version = "0.9.0", default-features = false }
drawbridge-client = { version = "0.2.2", default-features = false }
enarx-config = { path = "../enarx-config", version = "0.6", default-features = false }
env_logger = { version = "0.9", default-features = false }
getrandom = { version = "0.2.6", features = ["rdrand"], default-features = false }
libc = { version = "0.2.126", default-features = false }
once_cell = { version = "1.13.0", default-features = false }
pkcs8 = { version = "0.9.0-pre.1", default-features = false }
ring = { version = "0.16.20", features = ["std"], default-features = false }
rustls = { version = "0.20.6", default-features = false }
sec1 = { version = "0.3.0-pre.1", features = ["der"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
sha2 = { version = "0.10.2", default-features = false }
toml = { version = "0.5.9", default-features = false }
ureq = { version = "2.4.0", features = ["charset", "json", "tls"], default-features = false }
url = { version = "2.2.2", features = ["serde"], default-features = false }
webpki-roots = { version = "0.22.2", default-features = false }
x509-cert = { version = "0.1.0", features = ["std"], default-features = false }
zeroize = { version = "1.5.4", features = ["alloc"], default-features = false }

# wasmtime and its pinned dependencies
# these will need to be updated together
wasmtime = { version = "0.40.0", features = ["cranelift", "pooling-allocator"], default-features = false }
cap-std = { version = "0.25.2", default-features = false }
io-lifetimes = { version = "0.7.2", default-features = false }
rustix = { version = "0.35.7", features = ["std"], default-features = false }
system-interface = { version = "0.22.0", default-features = false }
wasi-common = { version = "0.40.0", default-features = false }
wasmtime-wasi = { version = "0.40.0", features = ["sync"], default-features = false }
wiggle = { version = "0.40.0", default-features = false }

[target.'cfg(windows)'.dependencies]
io-extras = { version = "=0.15.0", default-features = false }

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
sallyport = { version = "0.6.3", path = "../sallyport", default-features = false }

[dev-dependencies]
wat = { version = "1.0", default-features = false }
