[package]
name = "enarx-exec-wasmtime"
version = "0.7.1"
edition = "2021"
description = "Enarx WebAssembly Loader"
authors = ["The Enarx Project Developers"]
repository = "https://github.com/enarx/enarx"
license = "Apache-2.0"

[features]
bench = ["dep:tracing-flame"]
dbg = ["rustls/logging"]

[dependencies]
anyhow = { workspace = true }
cap-std = { workspace = true }
const-oid = { workspace = true }
drawbridge-client = { workspace = true }
enarx-config = { workspace = true }
getrandom = { workspace = true }
io-lifetimes = { workspace = true }
libc = { workspace = true }
once_cell = { workspace = true }
pkcs8 = { workspace = true }
ring = { workspace = true }
rustix = { workspace = true }
rustls = { workspace = true }
sec1 = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true, features = ["release_max_level_info", "std"] }
tracing-subscriber = { workspace = true, features = ["ansi", "smallvec", "std", "tracing-log"] }
ureq = { workspace = true, features = ["charset", "json", "tls"] }
url = { workspace = true, features = ["serde"] }
wasi-common = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
webpki-roots = { workspace = true }
wiggle = { workspace = true, features = ["tracing_log"] }
x509-cert = { workspace = true }
zeroize = { workspace = true }

[target.'cfg(windows)'.dependencies]
io-extras = { workspace = true }

[target.'cfg(unix)'.dependencies]
tracing-flame = { workspace = true, optional = true }

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
sallyport = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wat = { workspace = true }
