[package]
name = "sallyport"
version = "0.5.1"
edition = "2021"
description = "API for the Enarx hypervisor-microkernel boundary"
authors = ["The Enarx Project Developers"]
repository = "https://github.com/enarx/enarx"
license = "Apache-2.0"
keywords = ["enarx", "syscall"]
categories = ["no-std"]

[features]
doc = ["dep:gdbstub"]

[dependencies]
goblin = { version = "0.5", features = ["elf64"], default-features = false }

# optional dependencies
gdbstub = { version = "0.6", optional = true, default-features = false }

[dev-dependencies]
libc = { version = "0.2.126", features = ["extra_traits"], default-features = false }
serial_test = { version = "0.8", default-features = false }
testaso = { version = "0.1", default-features = false }

[package.metadata.docs.rs]
all-features = true
